Move virSecret related APIs out of libvirt.h.in
Create a new libvirt-secret.h file to hold the public
API definitions for the virSecret type. This header
file is not self-contained, so applications will not directly
include it. They will continue to #include <libvirt/libvirt.h>

--- a/include/libvirt/Makefile.am
+++ b/include/libvirt/Makefile.am
@@ -24,6 +24,7 @@ virinc_HEADERS = libvirt.h		\
 		 libvirt-network.h \
 		 libvirt-nodedev.h \
 		 libvirt-nwfilter.h \
+		 libvirt-secret.h \
 		 libvirt-lxc.h		\
 		 libvirt-qemu.h		\
 		 virterror.h
