--- a/mingw-libvirt.spec.in
+++ b/mingw-libvirt.spec.in
@@ -235,6 +235,7 @@ rm -rf $RPM_BUILD_ROOT%{mingw64_libexecdir}/libvirt-guests.sh
 %{mingw32_includedir}/libvirt/libvirt-nodedev.h
 %{mingw32_includedir}/libvirt/libvirt-nwfilter.h
 %{mingw32_includedir}/libvirt/libvirt-secret.h
+%{mingw32_includedir}/libvirt/libvirt-storage.h
 %{mingw32_includedir}/libvirt/libvirt-stream.h
 %{mingw32_includedir}/libvirt/virterror.h
 %{mingw32_includedir}/libvirt/libvirt-lxc.h
@@ -305,6 +306,7 @@ rm -rf $RPM_BUILD_ROOT%{mingw64_libexecdir}/libvirt-guests.sh
 %{mingw64_includedir}/libvirt/libvirt-nodedev.h
 %{mingw64_includedir}/libvirt/libvirt-nwfilter.h
 %{mingw64_includedir}/libvirt/libvirt-secret.h
+%{mingw64_includedir}/libvirt/libvirt-storage.h
 %{mingw64_includedir}/libvirt/libvirt-stream.h
 %{mingw64_includedir}/libvirt/virterror.h
 %{mingw64_includedir}/libvirt/libvirt-lxc.h
