--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -539,6 +539,7 @@ DRIVER_SOURCE_FILES = \
 	$(UML_DRIVER_SOURCES) \
 	$(VBOX_DRIVER_SOURCES) \
 	$(VBOX_NETWORK_DRIVER_SOURCES) \
+	$(VBOX_STORAGE_DRIVER_SOURCES) \
 	vbox/vbox_tmpl.c \
 	$(VMWARE_DRIVER_SOURCES) \
 	$(XEN_DRIVER_SOURCES) \
@@ -698,13 +699,16 @@ VBOX_DRIVER_SOURCES =						\
 	vbox/vbox_V4_3.c vbox/vbox_CAPI_v4_3.h			\
 	vbox/vbox_V4_3_4.c vbox/vbox_CAPI_v4_3_4.h              \
 	vbox/vbox_common.c vbox/vbox_common.h                   \
-	vbox/vbox_storage.c                                     \
 	vbox/vbox_uniformed_api.h                               \
 	vbox/vbox_get_driver.h
 
 VBOX_NETWORK_DRIVER_SOURCES =					\
 	vbox/vbox_driver.c vbox/vbox_driver.h			\
 	vbox/vbox_network.c vbox/vbox_get_driver.h
+
+VBOX_STORAGE_DRIVER_SOURCES =					\
+	vbox/vbox_driver.c vbox/vbox_driver.h			\
+	vbox/vbox_storage.c vbox/vbox_get_driver.h
 
 VBOX_DRIVER_EXTRA_DIST =					\
 		vbox/vbox_tmpl.c vbox/README			\
@@ -1192,7 +1196,8 @@ noinst_LTLIBRARIES += libvirt_driver_vbox.la
 # GPLv2-only license requries that it be linked into
 # libvirtd and *not* libvirt.so
 #libvirt_la_BUILT_LIBADD += libvirt_driver_vbox.la
-libvirt_driver_vbox_la_LIBADD += libvirt_driver_vbox_network_impl.la
+libvirt_driver_vbox_la_LIBADD += libvirt_driver_vbox_network_impl.la \
+				 libvirt_driver_vbox_storage_impl.la
 endif ! WITH_DRIVER_MODULES
 
 libvirt_driver_vbox_impl_la_CFLAGS =				\
@@ -1224,7 +1229,8 @@ libvirt_driver_vbox_storage_impl_la_LDFLAGS = $(AM_LDFLAGS)
 libvirt_driver_vbox_storage_impl_la_LIBADD = $(DLOPEN_LIBS)		\
 		$(MSCOM_LIBS)					\
 		$(LIBXML_LIBS)
-libvirt_driver_vbox_storage_impl_la_SOURCES = $(VBOX_DRIVER_SOURCES)
+		libvirt_driver_vbox_impl.la
+libvirt_driver_vbox_storage_impl_la_SOURCES = $(VBOX_STORAGE_DRIVER_SOURCES)
 endif WITH_VBOX
 
 if WITH_XENAPI
