Add new driver-*.h files to DRIVER_SOURCES
The recently added driver-*.h files were not listed in the
Makefile.am causing them to be missed when creating dists.

Signed-off-by: Daniel P. Berrange <berrange@redhat.com>

--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -184,6 +184,15 @@ NODE_INFO_SOURCES = nodeinfo.h nodeinfo.c nodeinfopriv.h
 DATATYPES_SOURCES = datatypes.h datatypes.c
 DRIVER_SOURCES =							\
 		driver.c driver.h					\
+		driver-hypervisor.h					\
+		driver-interface.h					\
+		driver-network.h					\
+		driver-nodedev.h					\
+		driver-nwfilter.h					\
+		driver-secret.h						\
+		driver-state.h						\
+		driver-storage.h					\
+		driver-stream.h						\
 		internal.h						\
 		$(DATATYPES_SOURCES)					\
 		fdstream.c fdstream.h					\
