--- a/.gitignore
+++ b/.gitignore
@@ -40,6 +40,7 @@
 /build-aux
 /build-aux/
 /build/
+/confdefs.h
 /config.cache
 /config.guess
 /config.h
@@ -50,6 +51,8 @@
 /config.sub
 /configure
 /configure.lineno
+/conftest.c
+/conftest.err
 /daemon/*_dispatch.h
 /daemon/libvirt_qemud
 /daemon/libvirtd
