qemu: Allow use of iothreads for virtio ccw disk definitions
Extending the iothread disk support from pci to pci and ccw.

Signed-off-by: Boris Fiuczynski <fiuczy@linux.vnet.ibm.com>
Reviewed-by: Viktor Mihajlovski <mihajlov@linux.vnet.ibm.com>
Reviewed-by: Christian Borntraeger <borntraeger@de.ibm.com>

--- a/docs/formatdomain.html.in
+++ b/docs/formatdomain.html.in
@@ -509,9 +509,9 @@
       <dd>
         The content of this optional element defines the number
         of IOThreads to be assigned to the domain for use by
-        virtio-blk-pci target storage devices. There should be
-        only 1 or 2 IOThreads per host CPU. There may be more than
-        supported device assigned to each IOThread.
+        virtio-blk-pci and virtio-blk-ccw target storage devices. There
+        should be only 1 or 2 IOThreads per host CPU. There may be more
+        than one supported device assigned to each IOThread.
       </dd>
     </dl>
 
