gitignore: use wildcard for configure's temporary files
Pushed as trivial and pre-ACK'd here:

https://www.redhat.com/archives/libvir-list/2014-November/msg00180.html

Signed-off-by: Martin Kletzander <mkletzan@redhat.com>

--- a/.gitignore
+++ b/.gitignore
@@ -51,8 +51,7 @@
 /config.sub
 /configure
 /configure.lineno
-/conftest.c
-/conftest.err
+/conftest.*
 /daemon/*_dispatch.h
 /daemon/libvirt_qemud
 /daemon/libvirtd
