cpu_conf: Allow specification of 'units' for @memory on numa nodes.
CPU numa topology implicitly allows memory specification in 'KiB'.

Enabling this to accept the 'unit' in which memory needs to be specified.
This now allows users to specify memory in units of choice, and
lists the same in 'KiB' -- just like other 'memory' elements in XML.

    <numa>
      <cell cpus='0-3' memory='1024' unit='MiB' />
      <cell cpus='4-7' memory='1024' unit='MiB' />
    </numa>

Also augment test cases to correctly model NUMA memory specification.
This adds the tag 'unit="KiB"' for memory attribute in NUMA cells.

Signed-off-by: Prerna Saxena <prerna@linux.vnet.ibm.com>
Signed-off-by: Michal Privoznik <mprivozn@redhat.com>

--- a/docs/formatdomain.html.in
+++ b/docs/formatdomain.html.in
@@ -1153,8 +1153,8 @@
   &lt;cpu&gt;
     ...
     &lt;numa&gt;
-      &lt;cell id='0' cpus='0-3' memory='512000'/&gt;
-      &lt;cell id='1' cpus='4-7' memory='512000' memAccess='shared'/&gt;
+      &lt;cell id='0' cpus='0-3' memory='512000' unit='KiB'/&gt;
+      &lt;cell id='1' cpus='4-7' memory='512000' unit='KiB' memAccess='shared'/&gt;
     &lt;/numa&gt;
     ...
   &lt;/cpu&gt;
@@ -1165,6 +1165,9 @@
       <code>cpus</code> specifies the CPU or range of CPUs that are
       part of the node. <code>memory</code> specifies the node memory
       in kibibytes (i.e. blocks of 1024 bytes).
+      <span class="since">Since 1.2.11</span> one can use an additional <a
+          href="#elementsMemoryAllocation"><code>unit</code></a> attribute to
+      define units in which <code>memory</code> is specified.
       <span class="since">Since 1.2.7</span> all cells should
       have <code>id</code> attribute in case referring to some cell is
       necessary in the code, otherwise the cells are
